src/patternfly/components/Radio/radio.scss
.pf-c-radio {
  --pf-c-radio--GridGap: var(--pf-global--spacer--xs) var(--pf-global--spacer--sm);
  --pf-c-radio__label--disabled--Color: var(--pf-global--disabled-color--100);
  --pf-c-radio__label--Color: var(--pf-global--Color--100);
  --pf-c-radio__label--FontWeight: var(--pf-global--FontWeight--normal);
  --pf-c-radio__label--FontSize: var(--pf-global--FontSize--md);
  --pf-c-radio__label--LineHeight: var(--pf-global--LineHeight--sm);
  --pf-c-radio__input--MarginTop: #{pf-size-prem(-3px)};
  --pf-c-radio__description--FontSize: var(--pf-global--FontSize--sm);
  --pf-c-radio__description--Color: var(--pf-global--Color--200);

  display: grid;
  grid-template-columns: auto 1fr;
  grid-gap: var(--pf-c-radio--GridGap);
  align-items: center;
  justify-items: start;
}

.pf-c-radio__label {
  font-size: var(--pf-c-radio__label--FontSize);
  font-weight: var(--pf-c-radio__label--FontWeight);
  line-height: var(--pf-c-radio__label--LineHeight);
  color: var(--pf-c-radio__label--Color);
}

.pf-c-radio__input {
  margin-top: var(--pf-c-radio__input--MarginTop);
}

.pf-c-radio__description {
  grid-column: 2;
  font-size: var(--pf-c-radio__description--FontSize);
  color: var(--pf-c-radio__description--Color);
}

.pf-c-radio__label,
.pf-c-radio__input {
  @at-root label.pf-c-radio,
  &, {
    cursor: pointer;
  }

  &:disabled,
  &.pf-m-disabled {
    --pf-c-radio__label--Color: var(--pf-c-radio__label--disabled--Color);

    cursor: not-allowed;
  }
}

